[package]
name = "des-file-encrypt-decrypt"
version = "0.1.0"
authors = ["lishuxiang <lishuxiang@cug.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-modes = "0.3.3"
hex-literal = "0.2.1"
des = "0.3.0"
tokio = { version = "0.2", features = ["full"] }
clap = "2.33.0"
fltk = "^0.3"
futures = "0.3.4"
